k8s/uiapp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uiapp-deploy
  labels:
    name: uiapp-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: uiapp
  template:
    metadata:
      labels:
        app: uiapp
    spec:
      containers:
      - name: uiapp
image: harbor.securityzone.kh:8030/demo/ui-app:116
        imagePullPolicy: Always
        ports:
        - containerPort: 80
      imagePullSecrets:
        - name: regcred

# Secret for Docker registry credentials
