k8s/userdb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userdb-deployment
  labels:
    name: userdb
spec:
  replicas: 1
  selector:
    matchLabels:
      service: userdb
  template:
    metadata:
      labels:
        service: userdb
    spec:
      containers:
        - image: postgres:latest
          imagePullPolicy: Always
          name: postgres
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: userdb-volume-mount
      volumes:
        - name: userdb-volume-mount
          persistentVolumeClaim:
            claimName: userdb-pvc
