k8s/uiapp-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: uiapp-svc
  labels:
    service: uiapp-svc
spec:
  type: ClusterIP
  ports:
    - name: tcp-port
      port: 80
      targetPort: 3000
      protocol: TCP
  selector:
    app: uiapp
