k8s/user-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-deploy
  labels:
    name: user-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-api
  template:
    metadata:
      labels:
        app: user-api
    spec:
      containers:
        - name: user-api
             image: harbor.securityzone.kh:8030/demo/user-service:120
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: env-file
              readOnly: true
              mountPath: "/app/.env"
              subPath: .env
      imagePullSecrets:
        - name: regcred
      volumes:
        - name: env-file
          secret:
            secretName: fastapi-userdb-cred
---
apiVersion: v1
kind: Service
metadata:
  name: user-svc
  labels:
    service: user-svc
spec:
  type: ClusterIP
  ports:
    - name: tcp-port
      port: 8002
      targetPort: 8000
      protocol: TCP
  selector:
    app: user-api
